fixed issue with text-wrap: nowrap, now using white-space: nowrap

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -64,7 +64,7 @@
   position: absolute;
   height: 60px;
   overflow: hidden;
-  text-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .animated-text {
